<resources>
    <string name="app_name">Android MVP</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Navigation -->
    <string name="nav_action_home">Home</string>
    <string name="nav_action_explore">Explore</string>
    <string name="nav_action_profile">Profile</string>
    <string name="nav_app_group">App</string>
    <string name="nav_action_settings">Settings</string>
    <string name="nav_action_about">About</string>

    <!-- About -->
    <string name="about_activity">About</string>
    <string name="app_author">Author: %1$s</string>
    <string name="app_version">Version: %1$s</string>
    <string name="app_description">Sample App that demonstrates how to work with Dagger 2 + Retrofit 2 implementing MVP</string>

    <!-- Error -->
    <string name="error_invalid_username">Invalid username</string>
    <string name="error_already_logged_in">You\'re already logged in</string>
    <string name="error_server_login">It was not possible to sign in</string>

    <!-- Login -->
    <string name="login">Login</string>
    <string name="login_description">Introduce your GitHub Username to see your repos and explore profiles</string>
    <string name="username">Username</string>
    <string name="button_continue">Continue</string>
</resources>
